--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,19 +1,21 @@
 html, body {
-  width: 100%;
-  height: 100%;
   padding: 0px;
   margin: 0px;
-  overflow: hidden;
-  font-family: 'Roboto';
+  width: 100%;
+  height: 100%;
+  /*overflow: hidden;*/
+  font-family: 'Lato';
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
 }
 
-h1 {
+h1, h2, h3{
   font-family: 'Montserrat';
+  padding: 0px;
+  margin: 0px;
 }
 
 a {
@@ -39,26 +41,79 @@ p {
 
 .l-header {
   display: flex;
-
-}
-
-.l-footer {
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   width: 100%;
-  height: 30px;
-  background-color: black;
-  color: white;
+  height: 250px;
+  padding: 0px;
+  margin: 0px;
 }
 
-.l-footer p{
+.l-header-title{
+  padding-left: 40px;
+  border: 1px black solid;
+}
+
+.l-header-title h1{
+  font-size: 60px;
+}
+
+.l-header-title h2{
+  font-size: 40px;
+  padding-left: 20px;
+}
+
+.l-header nav{
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: wrap;
+  font-size: 30px;
+  margin-right: 5%;
   width: 100%;
-  text-align:right;
-  margin-top : 10px;
-  margin-left: -10px;
-  font-size: 10px;
+  border: 1px black solid;
 }
 
+.l-header nav a{
+  position: relative;
+  margin-right: 20px;
+  padding-bottom: 10px;
+}
+
+.l-header nav a:last-child{
+  margin-right: 50px;
+}
+
+.l-header nav a::after{
+  content: "";
+  position: absolute;
+  background-color: #333;
+  width: 100%;
+  height: 2px;
+  bottom: 0px;
+  left: 0px;
+  transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  transform: scaleX(0);
+  -webkit-transform: scaleX(0);
+}
+
+.l-header nav a:hover::after{
+  transform: scaleX(1);
+  -webkit-transform: scaleX(1);
+}
+
+.l-header nav img{
+    display: none;
+  }
 
 
+.l-body {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /*****************************************\
 
       Module
@@ -70,3 +125,16 @@ p {
       State
 
 \*****************************************/
+.hidden {
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
+}
+/*****************************************\
+
+      Animations #85672b
+
+\*****************************************/
+
