--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -45,7 +45,7 @@ p {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  height: 120px;
+  height: 80px;
   background-color: #FFF;
 }
 
@@ -53,44 +53,39 @@ p {
   position: relative;
   padding-left: 10%;
   align-self: center;
+  height: 80%;
 }
 
 .l-header-title h1{
   font-family: Fairview;
-  letter-spacing: 1px;
   font-weight: lighter;
-  font-size: 4em;
+  font-size: 2.75em;
 }
 
 .l-header-title h2{
   font-family: DejaVu;
   position: relative;
   color: #333;
-  top:-5px;
   font-size: 1.25em;
   padding-left: 60px;
+  flex-wrap: wrap;
+  top : -6px;
+  width: 100%;
 }
 
 .l-header nav{
-  font-family: DejaVu;
-  position: relative;
-  display: flex;
-  justify-content: flex-end;
-  flex-wrap: wrap;
-
-  padding-top: 25px;
-  width: 100%;
+  padding-right: 10%;
 }
 
 .l-header nav a{
   position: relative;
-  font-size: 1.7em;
+  font-size: 1.25em;
   z-index: 2;
   margin-right: 30px;
 }
 
 .l-header nav a:last-child{
-  margin-right: 10%;
+  margin-right: 0%;
 }
 
 .l-header nav a::after{
@@ -119,8 +114,8 @@ p {
   }
 
 
-.l-body {
-  min-width: 1000px;
+.l-body-carousel {
+  min-width: 960px;
   max-width: 100%;
   height: 800px;
   position: relative;
@@ -131,7 +126,7 @@ p {
   align-items: flex-start;
 }
 
-.l-body article {
+.l-body-carousel article {
   display: flex;
   overflow: hidden;
   flex-direction: column;
@@ -143,52 +138,110 @@ p {
   z-index: 0;
 }
 
-.l-body article img{
-
+.l-body-carousel article img{
   height: 100%;
 }
 
-.l-body article h2{
+.l-body-carousel article h2{
   position: absolute;
   top: 10px;
-  color: white;
+  color: #FFF;
+  font-size: 6em;
+  font-family: 'Macondo';
 }
 
-.l-body .Left{
-  left: -5%;
+.l-body-carousel .Left{
+  left: -3%;
   transition: all ease-in-out 0.3s;
 }
-.l-body .Right{
-  right: -5%;
+.l-body-carousel .Right{
+  right: -3%;
   transition: all ease-in-out 0.3s;
 }
 
-.l-body .Left:hover{
-  left: 0px;
+.l-body-carousel .Left:hover{
+  left: 0%;
 }
 
-.l-body .Right:hover{
+.l-body-carousel .Right:hover{
   right: 0px;
 }
 
-.arrow {
+.pannel {
   position: absolute;
-  z-index: 2;
-  width: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  width: 23%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0.2;
 }
 
-.arrow:hover {
+.pannel:hover {
   opacity: 1;
 }
+
+.arrow {
+  background-image: url("../Assets/Arrow.png");
+  width: 150px;
+  height: 75px;
+  position: relative;
+  transition: all ease-in-out 0.3s;
+}
+
+.Right .arrow{
+  transform: rotateY(180deg) translateX(50px);
+}
+
+.Right:hover .arrow{
+  transform: rotateY(180deg) translateX(-10px);
+}
+
+.Left .arrow{
+  transform: translateX(50px);
+}
+
+.Left:hover .arrow{
+  transform: translateX(-10px);
+}
+
+.l-body-game{
+  min-width: 460;
+  max-width: 1200px;
+  position: relative;
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.l-body-game h2{
+  font-family: "montserrat";
+  font-size: 2.5em;
+  width: 100%;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 30px;
+}
+
+.l-body-game img {
+  width: 90%;
+  height: auto;
+  padding-bottom: 30px;
+}
+
+.l-body-game pre {
+  font-size: 1.5em;
+  font-family: "roboto";
+  align-self: flex-start;
+}
+
 /*****************************************\
 
       Module
-
-\*****************************************/
-
 /*****************************************\
 
       State
