--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -63,7 +63,7 @@ p {
 }
 
 .l-header-title h2{
-  font-family: DejaVu;
+  font-family: "DejaVu";
   position: relative;
   color: #333;
   font-size: 1.25em;
@@ -78,6 +78,7 @@ p {
 }
 
 .l-header nav a{
+  font-family: "Open Sans";
   position: relative;
   font-size: 1.25em;
   z-index: 2;
@@ -227,10 +228,46 @@ p {
   padding-bottom: 30px;
 }
 
-.l-body-game img {
+.l-body-game .image-link-container {
+  width: 100%;
+  min-width: 460px;
+  height: 400px;
   width: 90%;
-  height: auto;
   padding-bottom: 30px;
+  overflow: hidden;
+  position: relative;
+}
+
+.l-body-game .image-link-container .image-link {
+  background-color: rgba(75, 75, 75,0);
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transition: all 0.3s ease-in-out;
+}
+
+.l-body-game .image-link-container .image-link::after {
+  content: "";
+  width: 100px;
+  height: 100px;
+  align-self: center;
+
+  position: absolute;
+  z-index: 3;
+  background-image: url("../Assets/Door1.png");
+}
+
+.l-body-game .image-link-container .image-link:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+
+
+.l-body-game .image-link-container img {
+  width: 100%;
+  height: auto;
+  position: relative;
 }
 
 .l-body-game pre {
