--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -41,6 +41,9 @@ p {
   box-sizing: border-box;
   display: flex;
   width: 100%;
+  padding-left: 50px;
+  padding-right: 50px;
+  max-width: 1200px;
   white-space: nowrap;
   flex-direction: row;
   align-items: center;
@@ -51,8 +54,6 @@ p {
 
 .l-header-title{
   position: relative;
-  padding-left: 10%;
-  align-self: center;
   height: 80%;
 }
 
@@ -74,7 +75,20 @@ p {
 }
 
 .l-header nav{
-  padding-right: 10%;
+  width: auto;
+  height: auto;
+  border: none;
+  position: relative;
+  border-radius: 0px;
+}
+
+.l-header nav::after{
+  content: "";
+  width: 45px;
+  height: 45px;
+  position: absolute;
+  top: 3px;
+  left: 2px;
 }
 
 .l-header nav a{
@@ -103,11 +117,27 @@ p {
   transform: scaleX(0);
 }
 
-
-
 .l-header nav a:hover::after{
 -webkit-transform: scaleX(1) ;
   transform: scaleX(1);
+}
+
+@media screen and (max-width: 850px) {
+    .l-header nav{
+      width: 50px;
+      height: 50px;
+      border: 3px black solid;
+      border-radius: 12px;
+    }
+
+    .l-header nav::after{
+      z-index: 2;
+      background-image: url("../Assets/menu.png");
+    }
+
+    .l-header nav a{
+      visibility: hidden;
+    }
 }
 
 .l-header nav img{
@@ -116,7 +146,7 @@ p {
 
 
 .l-body-carousel {
-  min-width: 960px;
+  min-width: 900px;
   max-width: 100%;
   height: 800px;
   position: relative;
@@ -125,6 +155,18 @@ p {
   flex-direction: row;
   justify-content: center;
   align-items: flex-start;
+}
+
+.l-body-carousel a {
+  display: flex;
+  overflow: hidden;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  position: relative;
+  height: 100%;
+  width: 100%;
+  z-index: 0;
 }
 
 .l-body-carousel article {
@@ -209,11 +251,11 @@ p {
 }
 
 .l-body-game{
-  min-width: 460;
-  max-width: 1200px;
+  min-width: 800px;
+  width : 90%;
+  max-width: 1100px;
   position: relative;
   display: flex;
-  overflow: hidden;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -229,11 +271,9 @@ p {
 }
 
 .l-body-game .image-link-container {
-  width: 100%;
   min-width: 460px;
-  height: 400px;
   width: 90%;
-  padding-bottom: 30px;
+  display: flex;
   overflow: hidden;
   position: relative;
 }
@@ -247,27 +287,39 @@ p {
   transition: all 0.3s ease-in-out;
 }
 
+.l-body-game .image-link-container .image-link:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 .l-body-game .image-link-container .image-link::after {
   content: "";
   width: 100px;
   height: 100px;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
   align-self: center;
-
   position: absolute;
   z-index: 3;
   background-image: url("../Assets/Door1.png");
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
 }
 
-.l-body-game .image-link-container .image-link:hover {
-  background-color: rgba(0, 0, 0, 0.6);
+.l-body-game .image-link-container .image-link:hover::after {
+  opacity: 1;
 }
-
-
 
 .l-body-game .image-link-container img {
-  width: 100%;
-  height: auto;
-  position: relative;
+  max-width: 100%;
+  height: 100%;
+  transition: all 0.3s ease-in-out;
+}
+
+.l-body-game .image-link-container .image-link:hover + img {
+  filter : blur(3px);
 }
 
 .l-body-game pre {
@@ -276,6 +328,66 @@ p {
   align-self: flex-start;
 }
 
+.contact {
+  position: relative;
+  margin-top: 50px;
+  width: 60%;
+  min-width: 600px;
+  max-width: 1200px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  font-family: "Open Sans";
+}
+
+.contact fieldset {
+  min-height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border: none;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  line-height: 50px;
+}
+
+.contact fieldset input {
+  width: 50%;
+  max-width: 800px;
+  min-width: 200px;
+}
+
+.contact fieldset textarea {
+  width: 100%;
+  max-width: 800px;
+  min-width: 460px;
+  min-height: 200px;
+  align-self: center;
+}
+
+.contact input[type="submit"]{
+  align-self: flex-end;
+  font-family: "Roboto";
+  margin-top: 25px;
+  width: 150px;
+  height: 30px;
+  border: none;
+  background-color: #85672b;
+  font-size: 16px;
+  color: white;
+  transition: all 0.1s ease-in-out;
+}
+
+.contact input[type="submit"]:hover{
+  align-self: flex-end;
+  font-family: "Roboto";
+  margin-top: 25px;
+  width: 150px;
+  height: 30px;
+  background-color: #99762f;
+  filter:  drop-shadow(10px,10px,8px, black);
+  -webkit-filter:  drop-shadow(5px 5px 8px grey);
+}
 /*****************************************\
 
       Module
