--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -48,7 +48,7 @@ p {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  height: 80px;
+  min-height: 80px;
   background-color: #FFF;
 }
 
@@ -126,8 +126,8 @@ p {
     .l-header nav{
       width: 50px;
       height: 50px;
-      border: 3px black solid;
-      border-radius: 12px;
+      flex-direction: column;
+      height: 300px;
     }
 
     .l-header nav::after{
@@ -135,9 +135,9 @@ p {
       background-image: url("../Assets/menu.png");
     }
 
-    .l-header nav a{
-      visibility: hidden;
-    }
+    /*.l-header nav a{
+      display: none;
+    }*/
 }
 
 .l-header nav img{
@@ -338,6 +338,7 @@ p {
   display: flex;
   flex-direction: column;
   font-family: "Open Sans";
+  font-size: 1.25em;
 }
 
 .contact fieldset {
