--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -40,6 +40,7 @@ p {
 .l-header {
   box-sizing: border-box;
   display: flex;
+  flex-wrap: wrap;
   width: 100%;
   padding-left: 50px;
   padding-right: 50px;
@@ -123,16 +124,15 @@ p {
 }
 
 @media screen and (max-width: 850px) {
-    .l-header nav{
-      width: 50px;
-      height: 50px;
+    .l-header{
       flex-direction: column;
-      height: 300px;
+      align-items: center;
+      margin-top: 10px;
+      margin-bottom: 20px;
     }
 
-    .l-header nav::after{
-      z-index: 2;
-      background-image: url("../Assets/menu.png");
+    .l-header .l-header-title{
+      flex: 1;
     }
 
     /*.l-header nav a{
@@ -251,7 +251,7 @@ p {
 }
 
 .l-body-game{
-  min-width: 800px;
+  min-width: 500px;
   width : 90%;
   max-width: 1100px;
   position: relative;
@@ -271,7 +271,7 @@ p {
 }
 
 .l-body-game .image-link-container {
-  min-width: 460px;
+  min-width: 360px;
   width: 90%;
   display: flex;
   overflow: hidden;
@@ -322,10 +322,12 @@ p {
   filter : blur(3px);
 }
 
-.l-body-game pre {
+.l-body-game p {
   font-size: 1.5em;
   font-family: "roboto";
   align-self: flex-start;
+  width: 90%;
+  margin-top: 30px;
 }
 
 .contact {
