--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -146,9 +146,9 @@ p {
 
 
 .l-body-carousel {
-  min-width: 900px;
-  max-width: 100%;
-  height: 800px;
+  max-width: 1400px;
+  min-width: 600px;
+  width : 100%;
   position: relative;
   display: flex;
   overflow:hidden;
@@ -176,13 +176,15 @@ p {
   align-items: center;
   justify-content: flex-start;
   position: relative;
-  height: 100%;
   width: 100%;
+  height: 100%;
   z-index: 0;
 }
 
 .l-body-carousel article img{
-  height: 100%;
+  max-width: 150%;
+  max-height: 800px;
+  height: auto;
 }
 
 .l-body-carousel article h2{
