--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -119,7 +119,7 @@ p {
   transform: scaleX(0);
 }
 
-.l-header nav a:hover::after{
+.l-header nav a:hover::after {
 -webkit-transform: scaleX(1) ;
   transform: scaleX(1);
 }
@@ -147,13 +147,18 @@ p {
 
 
 .l-body-carousel {
+  max-width: 1400px;
+  width: 100%;
+  min-width: 460px;
+  height: 800px;
+  min-height: 600px;
   position: relative;
   display: flex;
-  overflow:hidden;
+  overflow: hidden;
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  flex-wrap: nowrap;
+  border: 20px black solid;
 }
 
 .l-body-carousel a {
@@ -163,6 +168,8 @@ p {
   align-items: center;
   justify-content: flex-start;
   position: relative;
+  min-width: 100%;
+  height: 100%;
   z-index: 0;
 }
 
@@ -173,17 +180,14 @@ p {
   align-items: center;
   justify-content: flex-start;
   position: relative;
+  z-index: 0;
   width: 100%;
   height: 100%;
-  z-index: 0;
 }
 
 .l-body-carousel article img{
-  max-width: 1400px;
-  min-width: 150%;
-  max-height: 80%;
-  min-height: 60%;
-  height: auto;
+  width: 100%;
+  height: 100%;
 }
 
 .l-body-carousel article h2{
@@ -401,26 +405,35 @@ p {
 
 \*****************************************/
 .hidden {
-  display: none;
+  animation: slide-out 0.5s;
+  animation-fill-mode: forwards;
 }
 
-.hidden-right {
-  display: block;
-}
-
-.hidden-left {
-  visibility: hidden;
-}
-
-.show-right {
-  visibility: visible;
-}
-
-.show-left {
-  visibility: visible;
+.show{
+  animation: slide-in 0.5s ;
+  animation-fill-mode: forwards;
 }
 /*****************************************\
 
       Animations #85672b
 
 \*****************************************/
+
+@keyframes slide-in {
+  from {
+    width: 0%
+  }
+  to {
+    width: 100%;
+  }
+}
+
+
+@keyframes slide-out {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0%;
+  }
+}
