--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -136,9 +136,9 @@ p {
       flex: 1;
     }
 
-    /*.l-header nav a{
-      display: none;
-    }*/
+    .l-body-carousel {
+      max-height: 700px;
+    }
 }
 
 .l-header nav img{
@@ -151,14 +151,12 @@ p {
   width: 100%;
   min-width: 460px;
   height: 800px;
-  min-height: 600px;
   position: relative;
   display: flex;
   overflow: hidden;
   flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  border: 20px black solid;
+  justify-content: center;
+  align-items: center;
 }
 
 .l-body-carousel a {
@@ -166,11 +164,10 @@ p {
   overflow: hidden;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  position: relative;
-  min-width: 100%;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
   height: 100%;
-  z-index: 0;
 }
 
 .l-body-carousel article {
@@ -178,7 +175,7 @@ p {
   overflow: hidden;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   position: relative;
   z-index: 0;
   width: 100%;
@@ -186,8 +183,11 @@ p {
 }
 
 .l-body-carousel article img{
+  padding: auto;
+  min-width: 1200px;
   width: 100%;
   height: 100%;
+  left: 0%;
 }
 
 .l-body-carousel article h2{
@@ -220,7 +220,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 1;
+  z-index: 3;
   width: 23%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
@@ -405,13 +405,23 @@ p {
 
 \*****************************************/
 .hidden {
-  animation: slide-out 0.5s;
-  animation-fill-mode: forwards;
+  z-index: 0;
 }
 
-.show{
-  animation: slide-in 0.5s ;
+.fading {
+  z-index: 1;
+}
+
+.show-left{
+  animation: slide-left 0.5s ;
   animation-fill-mode: forwards;
+  z-index: 2;
+}
+
+.show-right{
+  animation: slide-right 0.5s ;
+  animation-fill-mode: forwards;
+  z-index: 2;
 }
 /*****************************************\
 
@@ -419,21 +429,21 @@ p {
 
 \*****************************************/
 
-@keyframes slide-in {
+@keyframes slide-right {
   from {
-    width: 0%
+    left: 100%;
   }
   to {
-    width: 100%;
+    left: 0%;
   }
 }
 
 
-@keyframes slide-out {
+@keyframes slide-left {
   from {
-    width: 100%;
+    left: -100%;
   }
   to {
-    width: 0%;
+    left: 0%;
   }
 }
