--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -192,7 +192,7 @@ p {
 }
 
 .l-body-carousel .Right:hover{
-  right: 0px;
+  right: 0%;
 }
 
 .pannel {
@@ -442,7 +442,7 @@ p {
       margin-bottom: 20px;
     }
 
-    .l-header .l-header-title{
+    .l-header .l-header-title {
       flex: 1;
     }
 
@@ -451,7 +451,10 @@ p {
     }
 
     .pannel {
-      border-radius: 0px 40px 40px 0px;
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       z-index: 3;
       width: 20%;
       height: 20%;
@@ -459,9 +462,35 @@ p {
       opacity: 1;
     }
 
-    /*.pannel .Right{
+    .Left {
+      border-radius: 0px 40px 40px 0px;
+      left: 0%;
+    }
+
+    .Right {
       border-radius: 40px 0px 0px 40px;
-    }*/
+      right: 0%;
+    }
+
+    .arrow {
+      background-image: url("../Assets/Arrow.png");
+    }
+
+    .Right .arrow {
+      transform: rotateY(180deg) translateX(0px);
+    }
+
+    .Right:hover .arrow {
+      transform: rotateY(180deg) translateX(0px);
+    }
+
+    .Left .arrow {
+      transform: translateX(0px);
+    }
+
+    .Left:hover .arrow {
+      transform: translateX(0px);
+    }
 
     .l-body-carousel .Left{
       left: 0%;
@@ -470,24 +499,12 @@ p {
       right: 0%;
     }
 
-    .arrow {
-      background-image: url("../Assets/Arrow.png");
+    .Left:hover{
+      left: 0%;
     }
 
-    .Right .arrow{
-      transform: rotateY(180deg) translateX(0px);
-    }
-
-    .Right:hover .arrow{
-      transform: rotateY(180deg) translateX(0px);
-    }
-
-    .Left .arrow{
-      transform: translateX(0px);
-    }
-
-    .Left:hover .arrow{
-      transform: translateX(0px);
+    .Right:hover{
+      right: 0px;
     }
 
 }
