--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -473,7 +473,7 @@ p {
     }
 
     .arrow {
-      background-image: url("../Assets/Arrow.png");
+      background-image: url("../Assets/Arrow-small.png");
     }
 
     .Right .arrow {
