--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -415,21 +415,20 @@ p {
 }
 
 .php-menu-game-icons .modif {
-  width : 100%;
-  height: 30%;
+  width : 50px;
+  height: 50px;
   background-image: url("../Assets/modifs.png");
   padding: 0px;
   margin: 0px;
 }
 
 .php-menu-game-icons .delete {
-  width : 100%;
-  height: 30%;
+  width : 50px;
+  height: 50px;
   background-image: url("../Assets/cross.png");
   padding: 0px;
   margin: 0px;
 }
-
 
 .php-menu-game-add {
   width : 200px;
